@@ -1,1 +1,4 @@
 SUBDIRS = gconf backends po intl
+
+bin_SCRIPTS = gconf-config
+
