@@ -54,11 +54,13 @@ AC_SUBST(absolute_top_srcdir)
 
 AC_OUTPUT([
 Makefile
+gconf-config
 gconf/Makefile
 backends/Makefile
 gconf-editor/Makefile
 intl/Makefile
 po/Makefile.in
-])
+],
+chmod +x gconf-config)
 
 
