@@ -1,5 +1,14 @@
 1999-08-29  Dave Camp  <campd@oit.edu>
 
+	* Makefile.am (bin_SCRIPTS): Install gconf-config.
+
+	* configure.in (AC_OUTPUT): Create gconf-config. 
+
+	* gconf/Makefile.am: Install gconf.h and gconf-schema.h.
+	
+
+1999-08-29  Dave Camp  <campd@oit.edu>
+
 	* configure.in (XML_LIBS): Use xml-config.
 
 1999-08-29  Kjartan Maraas  <kmaraas@online.no>
